--- a/blocks/highlight/_theme/highlight_theme_solarized-dark.css
+++ b/blocks/highlight/_theme/highlight_theme_solarized-dark.css
@@ -4,87 +4,54 @@ Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmai
 
 */
 
-.highlight_theme_solarized-dark code {
-  display: block; padding: 0.5em;
-  background: #002b36; color: #839496;
+.highlight_theme_solarized-dark .hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #002b36;
+  color: #839496;
+  -webkit-text-size-adjust: none;
 }
 
-.highlight_theme_solarized-dark .comment,
-.highlight_theme_solarized-dark .template_comment,
-.highlight_theme_solarized-dark .diff .header,
-.highlight_theme_solarized-dark .doctype,
-.highlight_theme_solarized-dark .pi,
-.highlight_theme_solarized-dark .lisp .string,
-.highlight_theme_solarized-dark .javadoc {
+.highlight_theme_solarized-dark .hljs-comment, .highlight_theme_solarized-dark .diff .hljs-header, .highlight_theme_solarized-dark .hljs-doctype, .highlight_theme_solarized-dark .hljs-pi, .highlight_theme_solarized-dark .lisp .hljs-string, .highlight_theme_solarized-dark .hljs-javadoc {
   color: #586e75;
-  font-style: italic;
 }
 
-.highlight_theme_solarized-dark .keyword,
-.highlight_theme_solarized-dark .winutils,
-.highlight_theme_solarized-dark .method,
-.highlight_theme_solarized-dark .addition,
-.highlight_theme_solarized-dark .css .tag,
-.highlight_theme_solarized-dark .request,
-.highlight_theme_solarized-dark .status,
-.highlight_theme_solarized-dark .nginx .title {
+/* Solarized Green */
+.highlight_theme_solarized-dark .hljs-keyword, .highlight_theme_solarized-dark .hljs-winutils, .highlight_theme_solarized-dark .method, .highlight_theme_solarized-dark .hljs-addition, .highlight_theme_solarized-dark .css .hljs-tag, .highlight_theme_solarized-dark .hljs-request, .highlight_theme_solarized-dark .hljs-status, .highlight_theme_solarized-dark .nginx .hljs-title {
   color: #859900;
 }
 
-.highlight_theme_solarized-dark .number,
-.highlight_theme_solarized-dark .command,
-.highlight_theme_solarized-dark .string,
-.highlight_theme_solarized-dark .tag .value,
-.highlight_theme_solarized-dark .phpdoc,
-.highlight_theme_solarized-dark .tex .formula,
-.highlight_theme_solarized-dark .regexp,
-.highlight_theme_solarized-dark .hexcolor {
+/* Solarized Cyan */
+.highlight_theme_solarized-dark .hljs-number, .highlight_theme_solarized-dark .hljs-command, .highlight_theme_solarized-dark .hljs-string, .highlight_theme_solarized-dark .hljs-tag .hljs-value, .highlight_theme_solarized-dark .hljs-rules .hljs-value, .highlight_theme_solarized-dark .hljs-phpdoc, .highlight_theme_solarized-dark .hljs-dartdoc, .highlight_theme_solarized-dark .tex .hljs-formula, .highlight_theme_solarized-dark .hljs-regexp, .highlight_theme_solarized-dark .hljs-hexcolor, .highlight_theme_solarized-dark .hljs-link_url {
   color: #2aa198;
 }
 
-.highlight_theme_solarized-dark .title,
-.highlight_theme_solarized-dark .localvars,
-.highlight_theme_solarized-dark .chunk,
-.highlight_theme_solarized-dark .decorator,
-.highlight_theme_solarized-dark .builtin,
-.highlight_theme_solarized-dark .built_in,
-.highlight_theme_solarized-dark .identifier,
-.highlight_theme_solarized-dark .title .keymethods,
-.highlight_theme_solarized-dark .vhdl .literal,
-.highlight_theme_solarized-dark .id {
+/* Solarized Blue */
+.highlight_theme_solarized-dark .hljs-title, .highlight_theme_solarized-dark .hljs-localvars, .highlight_theme_solarized-dark .hljs-chunk, .highlight_theme_solarized-dark .hljs-decorator, .highlight_theme_solarized-dark .hljs-built_in, .highlight_theme_solarized-dark .hljs-identifier, .highlight_theme_solarized-dark .vhdl .hljs-literal, .highlight_theme_solarized-dark .hljs-id, .highlight_theme_solarized-dark .css .hljs-function {
   color: #268bd2;
 }
 
-.highlight_theme_solarized-dark .attribute,
-.highlight_theme_solarized-dark .variable,
-.highlight_theme_solarized-dark .instancevar,
-.highlight_theme_solarized-dark .lisp .body,
-.highlight_theme_solarized-dark .smalltalk .number,
-.highlight_theme_solarized-dark .constant,
-.highlight_theme_solarized-dark .class .title,
-.highlight_theme_solarized-dark .parent,
-.highlight_theme_solarized-dark .haskell .type {
+/* Solarized Yellow */
+.highlight_theme_solarized-dark .hljs-attribute, .highlight_theme_solarized-dark .hljs-variable, .highlight_theme_solarized-dark .lisp .hljs-body, .highlight_theme_solarized-dark .smalltalk .hljs-number, .highlight_theme_solarized-dark .hljs-constant, .highlight_theme_solarized-dark .hljs-class .hljs-title, .highlight_theme_solarized-dark .hljs-parent, .highlight_theme_solarized-dark .hljs-type, .highlight_theme_solarized-dark .hljs-link_reference {
   color: #b58900;
 }
 
-.highlight_theme_solarized-dark .preprocessor,
-.highlight_theme_solarized-dark .preprocessor .keyword,
-.highlight_theme_solarized-dark .shebang,
-.highlight_theme_solarized-dark .symbol,
-.highlight_theme_solarized-dark .diff .change,
-.highlight_theme_solarized-dark .special,
-.highlight_theme_solarized-dark .keymethods,
-.highlight_theme_solarized-dark .attr_selector,
-.highlight_theme_solarized-dark .important,
-.highlight_theme_solarized-dark .subst,
-.highlight_theme_solarized-dark .cdata {
+/* Solarized Orange */
+.highlight_theme_solarized-dark .hljs-preprocessor, .highlight_theme_solarized-dark .hljs-preprocessor .hljs-keyword, .highlight_theme_solarized-dark .hljs-pragma, .highlight_theme_solarized-dark .hljs-shebang, .highlight_theme_solarized-dark .hljs-symbol, .highlight_theme_solarized-dark .hljs-symbol .hljs-string, .highlight_theme_solarized-dark .diff .hljs-change, .highlight_theme_solarized-dark .hljs-special, .highlight_theme_solarized-dark .hljs-attr_selector, .highlight_theme_solarized-dark .hljs-subst, .highlight_theme_solarized-dark .hljs-cdata, .highlight_theme_solarized-dark .css .hljs-pseudo, .highlight_theme_solarized-dark .hljs-header {
   color: #cb4b16;
 }
 
-.highlight_theme_solarized-dark .deletion {
+/* Solarized Red */
+.highlight_theme_solarized-dark .hljs-deletion, .highlight_theme_solarized-dark .hljs-important {
   color: #dc322f;
 }
 
-.highlight_theme_solarized-dark .tex .formula {
+/* Solarized Violet */
+.highlight_theme_solarized-dark .hljs-link_label {
+  color: #6c71c4;
+}
+
+.highlight_theme_solarized-dark .tex .hljs-formula {
   background: #073642;
 }
